add alias grey for gray

--- a/tailwindColours.css
+++ b/tailwindColours.css
@@ -11,6 +11,17 @@
 	--gray800: #2d3748;
 	--gray900: #1a202c;
 
+	--grey: #a0aec0;
+	--grey100: #f7fafc;
+	--grey200: #edf2f7;
+	--grey300: #e2e8f0;
+	--grey400: #cbd5e0;
+	--grey500: #a0aec0;
+	--grey600: #718096;
+	--grey700: #4a5568;
+	--grey800: #2d3748;
+	--grey900: #1a202c;
+
 	--red: #f56565;
 	--red100: #fff5f5;
 	--red200: #fed7d7;
